# olioohjelmointi

./: .gitignore.txt  README.md
build-teht1-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-teht1-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-teht1_1-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-teht1_1-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-teht2_1-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-teht2_1-Desktop-Debug/.qtc_clangd/: compile_commands.json
teht1_1/: CMakeLists.txt  main.cpp
teht2_1/: CMakeLists.txt  main.cpp
teht3_2/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
teht_4/: CMakeLists.txt  floor.cpp  floor.h  groundfloor.cpp  groundfloor.h  house.cpp  house.h  main.cpp  multistorybuilding.cpp  multistorybuilding.h
teht_5/: CMakeLists.txt  floor.cpp  floor.h  groundfloor.cpp  groundfloor.h  main.cpp  multistorybuilding.cpp  multistorybuilding.h
teht_6/build-teht_6-Unnamed-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
teht_6/teht_6/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
teht_6_1/build-teht_6_1-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
teht_7/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+51 files in other folders)
